# agent-up-sync-core

./: .gitignore  ARCHITECTURE.md  BENCHMARKS.md  Cargo.toml  EXAMPLES.md  LICENSE  MSRV.md  README.md  RELEASE.md  SAFETY.md  SCHEMAS.md
.github/workflows/: ci.yml
benches/: sync_transaction_classes.rs
src/: adapter.rs  error.rs  lib.rs  schema.rs
tests/: cli_library_parity.rs
upstream/: SOURCE.json
upstream/agent-up-integration-tests/: README.md
upstream/agent-up-integration-tests/Apps/control_center/scripts/validation/: generate_agent_up_sync_core_deployment_canary_matrix.py  validate_agent_up_sync_core_parity_expansion.sh  validate_agent_up_sync_core_rust_transaction_kernel.sh
upstream/agent-up-integration-tests/Apps/control_center/tests/sync_core_corpus/: sync_core_contract_examples.json  sync_core_python_expected_decisions.json
upstream/agent-up-integration-tests/Apps/control_center/tests/wave16/: test_agent_up_sync_core_guarded_mutation.py  test_agent_up_sync_core_performance.py  test_agent_up_sync_core_python_corpus.py  test_agent_up_sync_core_read_authority.py  test_agent_up_sync_core_rollout.py  test_agent_up_sync_core_rust_contract.py  test_agent_up_sync_core_rust_scaffold.py  test_agent_up_sync_core_shadow_classifier.py  test_agent_up_sync_core_transaction_candidate.py
upstream/agent-up-integration-tests/Apps/control_center/tests/wave19/: test_agent_up_sync_core_parity_expansion.py
