[package]
name = "agent-up-sync-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.89"
license = "Apache-2.0"
publish = false
description = "Rust convergence kernel for Agent-Up JJ workspace sync orientation, conflict classification, and journaled transaction planning"
repository = "https://github.com/GoodFarming/agent-up-jj-sync-core"

[lib]
name = "agent_up_sync_core"
path = "src/lib.rs"

[[bin]]
name = "agent-up-sync-core"
path = "src/bin/agent-up-sync-core.rs"

[[bench]]
name = "sync_transaction_classes"
path = "benches/sync_transaction_classes.rs"
harness = false

[features]
default = ["cli-jj-adapter"]
cli-jj-adapter = []
jj-lib-adapter = ["dep:jj-lib", "dep:pollster"]

[dependencies]
jj-lib = { version = "=0.40.0", optional = true }
pollster = { version = "0.4", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
